trunk/Archive2/5f/3d61fac663e239/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:5:26: error: 'auto' not allowed in function prototype
void render_doodle(const auto& doodle)
                         ^~~~
main.cpp:12:5: error: no matching function for call to 'render_doodle'
    render_doodle(7);
    ^~~~~~~~~~~~~
main.cpp:5:6: note: candidate function not viable: expects an l-value for 1st argument
void render_doodle(const auto& doodle)
     ^
main.cpp:13:5: error: no matching function for call to 'render_doodle'
    render_doodle("Test");
    ^~~~~~~~~~~~~
main.cpp:5:6: note: candidate function not viable: no known conversion from 'const char [5]' to 'int &' for 1st argument
void render_doodle(const auto& doodle)
     ^
3 errors generated.
